[gd_scene load_steps=12 format=3 uid="uid://02y145x3cag"]

[ext_resource type="Script" path="res://menus/chat.gd" id="1_ffpvd"]
[ext_resource type="Texture2D" uid="uid://dpkr4e81kqvmq" path="res://art/gui/wood/chat.png" id="1_jm1jy"]
[ext_resource type="Texture2D" uid="uid://blwj51l3m7bnh" path="res://art/gui/wood/chat_button_normal.png" id="3_idstd"]
[ext_resource type="Texture2D" uid="uid://corsn33nkafjn" path="res://art/gui/wood/chat_box.png" id="3_waqxj"]
[ext_resource type="Texture2D" uid="uid://5tpa4hvk83sf" path="res://art/gui/wood/chat_button_pressed.png" id="4_8dnry"]
[ext_resource type="Texture2D" uid="uid://bf4hbuo8o1lya" path="res://art/gui/wood/chat_button_hover.png" id="4_oq1ol"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_vu81p"]
texture = ExtResource("1_jm1jy")
region_rect = Rect2(0, 0, 506, 599)

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_6h037"]
texture = ExtResource("3_waqxj")
region_rect = Rect2(0, 0, 506, 564)

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_fbuix"]
texture = ExtResource("3_idstd")
region_rect = Rect2(0, 0, 83, 31)

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_jtuid"]
texture = ExtResource("4_oq1ol")
region_rect = Rect2(0, 0, 83, 31)

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_m03hq"]
texture = ExtResource("4_8dnry")
region_rect = Rect2(0, 0, 83, 31)

[node name="Chat" type="Panel"]
visible = false
anchors_preset = -1
anchor_right = 0.263542
anchor_bottom = 0.55463
theme_override_styles/panel = SubResource("StyleBoxTexture_vu81p")
script = ExtResource("1_ffpvd")
metadata/_edit_use_anchors_ = true

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
metadata/_edit_use_anchors_ = true

[node name="chat_box" type="RichTextLabel" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_styles/normal = SubResource("StyleBoxTexture_6h037")
bbcode_enabled = true
tab_size = 5

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="send" type="Button" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_styles/normal = SubResource("StyleBoxTexture_fbuix")
theme_override_styles/hover = SubResource("StyleBoxTexture_jtuid")
theme_override_styles/pressed = SubResource("StyleBoxTexture_m03hq")
text = "Send"

[node name="line_edit" type="LineEdit" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 4.98

[connection signal="pressed" from="VBoxContainer/HBoxContainer/send" to="." method="_on_send_pressed"]
